[package]
name = "day8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.13.0"
itertools = "0.12.0"

[[bin]]
name = "part1"
path = "src/bin/part1.rs"

[[bin]]
name = "part2"
path = "src/bin/part2.rs"
